fixed p51 on tablet mode, and very minor changes

--- a/css/style.scss
+++ b/css/style.scss
@@ -224,6 +224,7 @@ table#t01 th {
   .p4,
   .p41,
   .p5,
+  .p51,
   .p6,
   .p61,
   .p7,
